2008-09-24  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-cegcc.sh (build_gcc): Remove -j4.
	* build-mingw32ce.sh (build_gcc): Likewise.

2008-09-24  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-cegcc.sh: Rewrite based on build-mingw32ce.sh.

2008-09-24  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-mingw32ce.sh: Require bash.  Use a central a module list
	instead of hardcoding it in several places.  Use set -e, instead
	of a `|| exit 1' construct throughout.

2008-06-22  Danny Backx  <dannybackx@sourceforge.net>

	* build-cegcc.sh: Remove all instances of the function keyword for
	POSIX compliance. Based on info by Mosfet, see the mailing list.

2008-06-20  Danny Backx  <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh: Export BASE_DIRECTORY, the mingwdll build stuff
	requires it.

2008-03-27  Danny Backx  <dannybackx@users.sourceforge.net>

	* mingwdll: Add new directory structure, containing mostly
	Makefiles, to deal with creation of DLL files, to replace
	the build-mingw32ce-dlls.sh script.
	* build-mingw32ce.sh: Adapt to use mingwdll directory.
	* build-mingw32ce.sh: Change order of items in the help text so it
	reflects the reality.

2008-01-02  Danny Backx  <dannybackx@users.sourceforge.net>

	* cegcc/cegccdll/Makefile, cegcc/libstdc++/Makefile: Use "?=" to
	assign to the TARGET variable so make picks up the value from the
	environment if it is there.

2007-12-26  Danny Backx  <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh: add call to build-mingw32-dlls.sh.

2007-12-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce-dlls.sh: Change default target to arm-mingw32ce.
	Remove dependency on readlink.

2007-12-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh: Change default target to arm-mingw32ce.

2007-12-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh: Display bootstrapgcc option on `usage`.